Sat Jul 23 19:12:53 2011  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_err_in_callback.rb (test_err_in_callback): 
	  skip test if ADODB.connection is not available.

Sat Jul 23 15:37:04 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* parse.y (rb_enc_symname_type): :$a!, @a! and so on are not
	  valid symbols, so they should be inspected with quotes.

Sat Jul 23 17:06:25 2011  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_update_max_fd): validate fd.

	* ext/socket/rubysocket.h (rsock_discard_cmsg_resource): add
	  msg_peek_p argument for the declaration.

	* ext/socket/ancdata.c (discard_cmsg): add msg_peek_p argument.
	  assume FreeBSD, NetBSD and MacOS X doesn't generate passed fd
	  when MSG_PEEK. 
	  (rsock_discard_cmsg_resource): add msg_peek_p argument.
	  (bsock_recvmsg_internal): call rsock_discard_cmsg_resource with
	  msg_peek_p argument.

	* ext/socket/unixsocket.c (unix_recv_io): call
	  rsock_discard_cmsg_resource with msg_peek_p argument.

Sat Jul 23 14:38:28 2011  Eric Hodel  <drbrain@segment7.net>

	* test/rake*: Remove dependencies on flexmock and session gems.
	  [Ruby 1.9 - Bug #4987]

Sat Jul 23 12:19:04 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_check_id): take care of attrset ID created
	  implicitly by local ID.  [Bug #5084]

	* parse.y (rb_check_id): conversion condition was inverse.
	  [Bug #5084]

Fri Jul 22 21:46:54 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* vm_insnhelper.c (vm_call_cfunc): added volatile for a workaround
	  of cfp consistency error problem on OS X 10.7 (Lion). It's
	  suspected llvm optimization bug.
	  [Bug #5074] [ruby-dev:44185]

Fri Jul 22 21:18:20 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb (WFKV_): unroll the loop of regexp.

	* lib/uri/generic.rb (URI.decode_www_form_component): ditto.

Fri Jul 22 21:06:39 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_mod_{const,cvar}_defined, rb_obj_ivar_defined):